# project-beholder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GSD.md  Justfile  README.md  SECURITY.md  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  teardown.sh  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  sprint.yml  task.yml
.github/workflows/: ci.yml
docs/: assets.md
docs/adr/: ADR-01-pipeline-producer-consumer.md  ADR-02-config-centralizado.md  ADR-03-ollama-efemero.md
docs/design/: 01-layout-opcoes.html  02-nomenclatura-final.html  02-nomenclatura-opcoes-v1.html  02-nomenclatura-opcoes-v2.html  03-configuracoes-dnd.html  04-sidebar-final.html  05-botoes-comportamentos.html  06-arquitetura-pipeline.html
docs/sprints/backlog/: sprint-11-ui-polish.md  sprint-12-instalacao-desktop.md  sprint-13-correcoes-retroativas.md  sprint-14-packaging.md  sprint-15-workflow-ci.md
docs/superpowers/plans/: 2026-04-14-sprint-13-correcoes-retroativas.md
docs/superpowers/specs/: 2026-04-13-beholder-design.md  2026-04-14-sprint-ordering-design.md
hooks/: commit-msg  pre-commit
src/ai_vision/: moondream_prompt.py  ollama_lifecycle.py  orchestrator.py
src/core/: asset_queue.py  checkpoint.py  logging_config.py
src/core/config/: config.py  defaults.py
src/exporter/: dataset_writer.py  packer.py
src/gui/: main_window.py  sidebar.py  theme.py  widgets.py
src/gui/pages/: busca.py  cacada.py  cortex.py  espolio.py  grimorio.py  protocolo.py
src/scraper/: html_parser.py  stealth_spider.py
src/transformer/: icon_alchemist.py
tests/: conftest.py
tests/smoke/: test_config.py  test_imports.py  test_logging.py
tests/unit/: test_checkpoint.py  test_exporter.py  test_filas_pipeline.py  test_hash_estavel.py  test_html_parser.py  test_icon_alchemist.py  test_orchestrator_timeout.py  test_paths.py
