[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "project-beholder"
version = "0.1.0"
description = "Motor autônomo de predação visual"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "E701", "E712", "E741", "W293", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "smoke: testes rápidos de sanidade",
    "unit: testes isolados",
    "integration: multi-componente",
    "requires_display: precisa de display GTK",
    "requires_gpu: precisa de GPU NVIDIA",
]
