[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "project-beholder"
version = "0.2.0"
description = "Motor autônomo de predação visual"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [{name = "AndreBFarias"}]
keywords = ["scraping", "visual", "gtk4", "ollama", "assets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/AndreBFarias/project-beholder"
Repository = "https://github.com/AndreBFarias/project-beholder"
"Bug Tracker" = "https://github.com/AndreBFarias/project-beholder/issues"
Changelog = "https://github.com/AndreBFarias/project-beholder/blob/main/CHANGELOG.md"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "E701", "E712", "E741", "W293", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "smoke: testes rápidos de sanidade",
    "unit: testes isolados",
    "integration: multi-componente",
    "requires_display: precisa de display GTK",
    "requires_gpu: precisa de GPU NVIDIA",
]
